--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "connect-mongo":"0.2.0",
     "crypto": "0.0.3",
     "connect-flash": "0.1.0",
-    "express-partials": "0.0.6"
+    "express-partials": "0.0.6",
+    "mongoose":"3.0.2"
   },
   "engines": {
     "node": "0.8.x",
