--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "crypto": "0.0.3",
     "connect-flash": "0.1.0",
     "express-partials": "0.0.6",
-    "mongoose":"3.0.2"
+    "mongoose":"3.0.2",
+    "moment":"1.7.2"
   },
   "engines": {
     "node": "0.8.x",
