--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "crypto": "0.0.3",
     "connect-flash": "0.1.0",
     "express-partials": "0.0.6",
-    "mongoose":"3.3.1",
+    "mongoose":"3.4.0",
     "moment":"1.7.2",
-    "cloudinary": ""
+    "cloudinary": "",
+    "underscore": "1.4.2"
   },
   "engines": {
     "node": "0.8.x",
