doing user-blogs

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "cloudinary": "",
     "underscore": "1.4.2",
     "node-uuid":"1.4.0",
-    "express-error":"0.0.3"
-  },
+    "express-error":"0.0.3",
+    "underscore.string":"2.3.0"
+
+
+},
   "engines": {
     "node": "0.8.x",
     "npm": "1.1.x"
