--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "underscore": "1.4.2",
     "node-uuid":"1.4.0",
     "express-error":"0.0.3",
-    "underscore.string":"2.3.0"
-
-
+    "underscore.string":"2.3.0",
+    "redis":"0.8.2",
+    "hiredis":"0.1.14"
 },
   "engines": {
     "node": "0.8.x",
