--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "socket.io": "0.9.10",
-    "express": "3.x",
+    "express": "3.0.6",
     "express-expose":"0.3.3",
-    "jade": "*",
+    "jade": "0.28.0",
     "connect-mongo":"0.2.0",
     "crypto": "0.0.3",
     "connect-flash": "0.1.0",
@@ -22,7 +22,8 @@
     "express-error":"0.0.3",
     "underscore.string":"2.3.0",
     "redis":"0.8.2",
-    "hiredis":"0.1.14"
+    "hiredis":"0.1.14",
+    "github-flavored-markdown":"1.0.1"
 },
   "engines": {
     "node": "0.8.x",
