--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "redis":"0.8.2",
     "hiredis":"0.1.14",
     "connect-redis":"1.4.5",
-    "github-flavored-markdown":"1.0.1"
+    "github-flavored-markdown":"1.0.1",
+    "weibo": "0.6.8"
 },
   "engines": {
     "node": "0.8.x",
