--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "hiredis":"0.1.14",
     "connect-redis":"1.4.5",
     "github-flavored-markdown":"1.0.1",
-    "weibo": "0.6.8"
+    "weibo": "0.6.8",
+    "less":"1.3.3"
 },
   "engines": {
     "node": "0.8.x",
