--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "connect-redis":"1.4.5",
     "github-flavored-markdown":"1.0.1",
     "weibo": "0.6.8",
-    "less":"1.3.3"
+    "less":"1.3.3",
+    "blueimp-file-upload-node": ">=2.0.0",
+     "jquery-file-upload-middleware":">=0.0.8"
+
 },
   "engines": {
     "node": "0.8.x",
