--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "socket.io": "0.9.10",
-    "express": "3.0.6",
+    "express": ">=3.0.6",
     "express-expose":"0.3.3",
     "jade": "0.28.0",
     "connect-mongo":"0.2.0",
@@ -19,7 +19,7 @@
     "cloudinary": "",
     "underscore": "1.4.2",
     "node-uuid":"1.4.0",
-    "express-error":"0.0.3",
+    "express-error":">=0.0.3",
     "underscore.string":"2.3.0",
     "redis":"0.8.2",
     "hiredis":"0.1.14",
