--- a/package.json
+++ b/package.json
@@ -9,32 +9,39 @@
     "forever": "*",
     "socket.io": "0.9.10",
     "express": ">=3.0.6",
-    "express-expose":"0.3.3",
+    "express-expose": "0.3.3",
     "jade": ">=0.28.0",
-    "connect-mongo":"0.2.0",
+    "connect-mongo": "0.2.0",
     "crypto": "0.0.3",
     "connect-flash": "0.1.0",
     "express-partials": "0.0.6",
-    "mongoose":"3.4.0",
-    "moment":"1.7.2",
+    "mongoose": "3.4.0",
+    "moment": "1.7.2",
     "cloudinary": "",
     "underscore": "1.4.2",
-    "node-uuid":"1.4.0",
-    "express-error":">=0.0.3",
-    "underscore.string":"2.3.0",
-    "redis":"0.8.2",
-    "hiredis":"0.1.14",
-    "connect-redis":"1.4.5",
-    "github-flavored-markdown":"1.0.1",
+    "node-uuid": "1.4.0",
+    "express-error": ">=0.0.3",
+    "underscore.string": "2.3.0",
+    "redis": "0.8.2",
+    "hiredis": "0.1.14",
+    "connect-redis": "1.4.5",
+    "github-flavored-markdown": "1.0.1",
     "weibo": "0.6.8",
-    "less":"1.3.3",
+    "less": "1.3.3",
     "blueimp-file-upload-node": ">=2.0.0",
-     "jquery-file-upload-middleware":">=0.0.8"
-
-},
+    "jquery-file-upload-middleware": ">=0.0.8"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-concat": ">0.1.1",
+    "grunt-css": ">0.0.0",
+    "grunt-contrib-watch": "~0.4.4"
+  },
   "engines": {
     "node": "0.8.x",
     "npm": "1.1.x"
   }
-  
 }
