--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-concat": ">0.1.1",
+    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-css": ">0.0.0",
     "grunt-contrib-watch": "~0.4.4"
   },
