--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "grunt-contrib-concat": ">0.1.1",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-css": ">0.0.0",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-clean": "~0.5.0"
   },
   "engines": {
     "node": "0.8.x",
