--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less": "1.3.3",
     "blueimp-file-upload-node": ">=2.0.0",
     "jquery-file-upload-middleware": ">=0.0.8"
+    "nodemailer":">=0.5.5 "
   },
   "devDependencies": {
     "grunt": "~0.4.1",
