--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat",
-  "version": "0.2.4.5",
+  "version": "0.3.1.12",
   "private": true,
   "scripts": {
     "start": "node app"
@@ -17,7 +17,7 @@
     "express-partials": "0.0.6",
     "mongoose": "3.4.0",
     "moment": "1.7.2",
-    "cloudinary": "",
+
     "underscore": "1.4.2",
     "node-uuid": "1.4.0",
     "express-error": ">=0.0.3",
@@ -30,7 +30,8 @@
     "less": "1.3.3",
     "blueimp-file-upload-node": ">=2.0.0",
     "jquery-file-upload-middleware": ">=0.0.8",
-    "nodemailer":">=0.5.5 "
+    "nodemailer": ">=0.5.5",
+    "log4js": ">=0.6.9"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -44,7 +45,7 @@
     "grunt-contrib-clean": "~0.5.0"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": ">0.8.x",
+    "npm": ">=1.1.x"
   }
 }
