--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "blueimp-file-upload-node": ">=2.0.0",
     "jquery-file-upload-middleware": ">=0.0.8",
     "nodemailer": ">=0.5.5",
-    "log4js": ">=0.6.9"
+    "log4js":"0.6.9"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
