--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat",
   "author":"soar",
-  "version": "0.3.1.12",
+  "version": "0.3.12",
   "repository":{
     "url":"https://github.com/soarpatriot/chat"
   },
@@ -14,10 +14,10 @@
     "socket.io": "0.9.10",
     "express": "3.0.6",
     "express-expose": "0.3.3",
-    "jade": "0.28.0",
+    "jade": ">=0.28.0",
     "connect-mongo": "0.2.0",
     "crypto": "0.0.3",
-    "connect-flash": "0.1.0",
+    "connect-flash": ">=0.1.0",
     "express-partials": "0.0.6",
     "mongoose": "3.4.0",
     "moment": "1.7.2",
@@ -27,8 +27,8 @@
     "express-error": "0.0.3",
     "underscore.string": "2.3.0",
     "redis": "0.8.2",
-    "hiredis": "0.1.14",
-    "connect-redis": "1.4.5",
+    "hiredis": ">=0.1.14",
+    "connect-redis": ">=1.4.5",
     "github-flavored-markdown": "1.0.1",
     "weibo": "0.6.8",
     "less": "1.3.3",
@@ -38,15 +38,15 @@
     "log4js":"0.6.9"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
+    "grunt": ">=0.4.1",
+    "grunt-contrib-jshint": ">=0.6.0",
+    "grunt-contrib-nodeunit": ">=0.2.0",
+    "grunt-contrib-uglify": ">=0.2.2",
     "grunt-contrib-concat": ">0.1.1",
-    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-requirejs": ">=0.4.1",
     "grunt-css": ">0.0.0",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-watch": ">=0.4.4",
+    "grunt-contrib-clean": ">=0.5.0"
   },
   "engines": {
     "node": ">0.8.x",
