--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   "dependencies": {
     "forever": "*",
     "socket.io": "0.9.10",
-    "express": "3.0.6",
-    "express-expose": "0.3.3",
-    "jade": ">=0.28.0",
-    "connect-mongo": "0.2.0",
-    "crypto": "0.0.3",
+
+    "express": ">4.0",
+    
+    "method-override": "~1.0.0",
+    "express-session":"*",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "debug": "~0.7.4",
+    "jade": "~1.3.0",
+   
+   
     "connect-flash": ">=0.1.0",
     "express-partials": "0.0.6",
     "mongoose": ">3.4.0",
@@ -24,7 +32,7 @@
 
     "underscore": "1.4.2",
     "node-uuid": "1.4.0",
-    "express-error": "0.0.3",
+
     "underscore.string": "2.3.0",
     "redis": "0.8.2",
     "hiredis": ">=0.1.14",
