--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
   "name": "chat",
-  "author":"soar",
+  "author": "soar",
   "version": "0.4.4",
-  "repository":{
-    "url":"https://github.com/soarpatriot/chat"
+  "repository": {
+    "url": "https://github.com/soarpatriot/chat"
   },
-  "private":true,
+  "private": true,
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
     "forever": "*",
     "socket.io": "0.9.10",
-
     "express": ">4.0",
-    
     "method-override": "~1.0.0",
-    "express-session":"*",
+    "express-session": "*",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-   
-   
     "connect-flash": ">=0.1.0",
     "express-partials": "0.0.6",
     "mongoose": ">3.4.0",
     "moment": "1.7.2",
-
     "underscore": "1.4.2",
     "node-uuid": "1.4.0",
-
     "underscore.string": "2.3.0",
     "redis": "0.8.2",
     "hiredis": ">=0.1.14",
@@ -43,19 +37,20 @@
     "blueimp-file-upload-node": "2.0.0",
     "jquery-file-upload-middleware": "0.0.8",
     "nodemailer": "0.5.5",
-    "log4js":"0.6.9",
-    "q":"0.9.7"
+    "log4js": "0.6.9",
+    "q": "0.9.7"
   },
   "devDependencies": {
     "grunt": ">=0.4.1",
+    "grunt-clean": "^0.4.0",
+    "grunt-contrib-clean": ">=0.5.0",
+    "grunt-contrib-concat": ">0.1.1",
     "grunt-contrib-jshint": ">=0.6.0",
     "grunt-contrib-nodeunit": ">=0.2.0",
-    "grunt-contrib-uglify": ">=0.2.2",
-    "grunt-contrib-concat": ">0.1.1",
     "grunt-contrib-requirejs": ">=0.4.1",
-    "grunt-css": ">0.0.0",
+    "grunt-contrib-uglify": ">=0.2.2",
     "grunt-contrib-watch": ">=0.4.4",
-    "grunt-contrib-clean": ">=0.5.0"
+    "grunt-css": ">0.0.0"
   },
   "engines": {
     "node": ">0.8.x",
