--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,20 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "backbone": ">1.0.0"
+    "backbone": "~1.1.2",
+    "bootstrap": "~3.1.1",
+    "bootstrap-paginator": "~1.0.2",
+    "backbone-pageable": "~1.4.8",
+    "animo.js": "*",
+    "jqBootstrapValidation": "~1.3.7",
+    "jquery-colorbox": "~1.5.9",
+    "spin.js": "~2.0.1",
+    "select2": "~3.4.8",
+    "requirejs": "~2.1.14",
+    "showdown": "~0.3.1",
+    "underscore": "~1.6.0",
+    "utils": "*",
+    "requirejs-jquery": "~0.25.0",
+    "google-code-prettify": "~1.0.1"
   }
 }
