--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
     "start": "node app"
   },
   "dependencies": {
-    "forever": "*",
-    "socket.io": "0.9.10",
-    "express": ">4.0",
-    "method-override": "~1.0.0",
-    "express-session": "*",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "connect-flash": ">=0.1.0",
-    "express-partials": "0.0.6",
-    "mongoose": ">3.4.0",
-    "moment": "1.7.2",
-    "underscore": "1.4.2",
-    "node-uuid": "1.4.0",
-    "underscore.string": "2.3.0",
-    "redis": "0.8.2",
-    "hiredis": ">=0.1.14",
-    "connect-redis": ">=1.4.5",
-    "github-flavored-markdown": "1.0.1",
-    "weibo": "0.6.8",
-    "less": "1.3.3",
     "blueimp-file-upload-node": "2.0.0",
+    "body-parser": "~1.0.0",
+    "connect-flash": ">=0.1.0",
+    "connect-redis": ">=1.4.5",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "express": ">4.0",
+    "express-partials": "0.0.6",
+    "express-session": "*",
+    "forever": "*",
+    "github-flavored-markdown": "1.0.1",
+    "hiredis": ">=0.1.14",
+    "jade": "~1.3.0",
     "jquery-file-upload-middleware": "0.0.8",
-    "nodemailer": "0.5.5",
+    "less": "1.3.3",
     "log4js": "0.6.9",
-    "q": "0.9.7"
+    "method-override": "^1.0.2",
+    "moment": "1.7.2",
+    "mongoose": ">3.4.0",
+    "morgan": "~1.0.0",
+    "node-uuid": "1.4.0",
+    "nodemailer": "0.5.5",
+    "q": "0.9.7",
+    "redis": "0.8.2",
+    "socket.io": "0.9.10",
+    "static-favicon": "~1.0.0",
+    "underscore": "1.4.2",
+    "underscore.string": "2.3.0",
+    "weibo": "0.6.8"
   },
   "devDependencies": {
     "grunt": ">=0.4.1",
