--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.0.0",
     "connect-flash": ">=0.1.0",
     "connect-redis": ">=1.4.5",
+    "connect-mongo": "*",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": ">4.0",
@@ -27,7 +28,7 @@
     "log4js": "0.6.9",
     "method-override": "^1.0.2",
     "moment": "1.7.2",
-    "mongoose": ">3.4.0",
+    "mongoose": ">=4.0.2",
     "morgan": "~1.0.0",
     "node-uuid": "1.4.0",
     "nodemailer": "0.5.5",
